# catnip

./: .gitignore  Cargo.toml  README.md  poetry.toml  pyproject.toml  quick-cat.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  dependency-review.yml  release.yml  security.yml
quick-cat/: cli.py
quick_cat/: cli.py
src/: clipboard.rs  exclusion_patterns.rs  file_processor.rs  lib.rs  main.rs  pattern_matcher.rs  patterns.rs  prompt.rs  structure_generator.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: cat.rs  patch.rs
src/commands/: cat.rs  mod.rs  patch.rs
src/config/: mod.rs  prompt.rs
src/core/: content_processor.rs  file_collector.rs  mod.rs  pattern_matcher.rs
src/io/: file_operations.rs  mod.rs
src/utils/: language_detection.rs  mod.rs  text_processing.rs
tests/: test_cli.py  test_cli.rs
tests/integration/: cli_tests.rs
tests/unit/: clipboard_tests.rs  file_processor_tests.rs  mod.rs  pattern_matcher_tests.rs  patterns_tests.rs  structure_generator_tests.rs
