[tool.poetry]
name = "quick-cat"
version = "0.1.0"
description = "A script for concatenating files and preparing project summaries for LLMs"
authors = ["Federico A. Corazza <git@facorazza.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "quick_cat"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.8.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
quick-cat = "quick_cat.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
